# tutor-agent

./: .gitignore  README.md  dockerfile  main.py  pyproject.toml  requirements.txt  ui.py
math_agent/: agent.py  tools.py
physics_agent/: __init__.py
templates/: chat.html  index.html
tutor_agent/: agent.py  common_tools.py
tutor_agent/chemistry_agent/: __init__.py  agent.py  tools.py
tutor_agent/math_agent/: agent.py  tools.py
tutor_agent/physics_agent/: agent.py  tools.py
tutor_agent/physics_agent/math_agent/: tools.py
